# keck-hires-pipeline

./: .gitignore  MANIFEST.in  README.md  setup.cfg
hirespipeline/: __init__.py  airmass_extinction.py  files.py  general.py  graphics.py  image_processing.py  images.py  order_tracing.py  pipeline.py  reduction.py  saving.py  wavelength_solution.py
hirespipeline/anc/: legacy_arc_templates_blue.pickle  rcparams.mplstyle
