[metadata]
name = hirespipeline
version = 1.0.0
author = Zachariah Milby
description = A generic pipeline to reduce Keck HIRES echelle data.
home_page = https://github.com/zachariahmilby/keck-hires-pipeline

[options]
include_package_data = True
python_requires >= 3.10.0
packages = find:
install_requires =
   numpy==1.22.3
   matplotlib==3.5.1
   astropy==5.1
   ccdproc==2.3.0
   lmfit==1.0.3
   scipy==1.8.0
   scikit-learn==1.0.2
   pytest==7.2.0

[options.extras_require]
test =
   pytest
